tools/tests/errors/surf_lex_13.experr
error: single '}' in f-string